--- a/src/_layout.scss
+++ b/src/_layout.scss
@@ -36,13 +36,13 @@
 
     // Hide bottom border when open and below
     &.select2-container--open.select2-container--below .select2-selection {
-        border-bottom: $s2bs5-border-width solid transparent;
+        border-bottom: 0 solid transparent;
         @include border-bottom-radius(0);
     }
 
     // Hide top border when open and above
     &.select2-container--open.select2-container--above .select2-selection {
-        border-top: $s2bs5-border-width solid transparent;
+        border-top: 0 solid transparent;
         @include border-top-radius(0);
     }
 
