--- a/src/_validation.scss
+++ b/src/_validation.scss
@@ -19,12 +19,12 @@
         &.select2-container--open {
             // Hide bottom border when open and below
             &.select2-container--below .select2-selection {
-                border-bottom: $s2bs5-border-width solid transparent;
+                border-bottom: 0 solid transparent;
             }
 
             // Hide top border when open and above
             &.select2-container--above .select2-selection {
-                border-top: $s2bs5-border-width solid transparent;
+                border-top: 0 solid transparent;
                 @include border-top-radius(0);
             }
         }
@@ -50,12 +50,12 @@
         &.select2-container--open {
             // Hide bottom border when open and below
             &.select2-container--below .select2-selection {
-                border-bottom: $s2bs5-border-width solid transparent;
+                border-bottom: 0 solid transparent;
             }
 
             // Hide top border when open and above
             &.select2-container--above .select2-selection {
-                border-top: $s2bs5-border-width solid transparent;
+                border-top: 0 solid transparent;
                 @include border-top-radius(0);
             }
         }
